--- a/public/about.html
+++ b/public/about.html
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="row">
                     <div class="innter-title">
-                        <h2>About Us</h2>
+                        <h2>About Me</h2>
                     </div>
                     <div class="breadcrum-area">
                         <ul class="breadcrumb">
@@ -207,7 +207,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-7 col-sm-7">
                         <div class="title-section">
-                            <h2>Why Choose Us?</h2>
+                            <h2>Why Choose Me?</h2>
                         </div>
                         <div class="content-section">
                             <p>Congratulations on making it this far. You're probably thinking that you'd like to make some
