--- a/public/index.html
+++ b/public/index.html
@@ -231,8 +231,11 @@
                 <div class="why-choose2-wrapper">
                     <div class="why-choose-content">
                         <h2>Why Choose ME?</h2>
-                        <p>Rimply dummy text of the printing and typesetting indust ryorem Ipsum standard dummyn an unknown
-                            printer took.</p>
+                        <p>I am a normal guy with a wife and a daughter. I've been where you are and I understand how difficult
+                            the journey is. I've lost control of my weight and spent a good amount of time being obese. Nevertheless,
+                            I overcame the struggles and reached my fitness goals. I want to help others reach theirs, as
+                            well.
+                        </p>
                         <div class="panel-group" id="accordion">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
