updated social media links to personal

--- a/public/index.html
+++ b/public/index.html
@@ -171,12 +171,12 @@
           <p>Be the Best You, You Can Be</p>
           <ul class="main-banner-link">
             <li>
-              <a class="facebook" href="https://www.facebook.com/Onekinship/">
+              <a class="facebook" href="https://www.facebook.com/Donmega54">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
             </li>
             <li>
-              <a class="instagram" href="https://www.instagram.com/onekinship/">
+              <a class="instagram" href="https://www.instagram.com/donmega54/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
@@ -453,7 +453,7 @@
                       <li class="first">
                         <a
                           class="facebook"
-                          href="https://www.facebook.com/Onekinship/"
+                          href="https://www.facebook.com/Donmega54"
                         >
                           <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
@@ -461,7 +461,7 @@
                       <li class="second">
                         <a
                           class="instagram"
-                          href="https://www.instagram.com/onekinship/"
+                          href="https://www.instagram.com/donmega54/"
                         >
                           <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
