--- a/public/contact.html
+++ b/public/contact.html
@@ -297,7 +297,7 @@
                       <li class="first">
                         <a
                           class="facebook"
-                          href="https://www.facebook.com/Onekinship/"
+                          href="https://www.facebook.com/Donmega54"
                         >
                           <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
@@ -305,7 +305,7 @@
                       <li class="second">
                         <a
                           class="instagram"
-                          href="https://www.instagram.com/onekinship/"
+                          href="https://www.instagram.com/donmega54/"
                         >
                           <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
