--- a/public/about.html
+++ b/public/about.html
@@ -230,7 +230,7 @@
               <div class="about-img">
                 <img
                   class="img-responsive"
-                  src="img/about-right-img.jpg"
+                  src="/img/don_with_scarlett_zoo.jpg"
                   alt="about-img"
                 />
               </div>
@@ -243,6 +243,9 @@
       <div class="choose-us-area padding-space">
         <div class="container">
           <div class="row">
+            <div class="col-xs-12 col-md-5 col-sm-5">
+              <img src="/img/about-right-img.jpg" />
+            </div>
             <div class="col-xs-12 col-md-7 col-sm-7">
               <div class="title-section"><h2>Why Choose Me?</h2></div>
               <div class="content-section">
@@ -269,22 +272,6 @@
                   happen.
                 </p>
               </div>
-            </div>
-            <div class="col-xs-12 col-md-5 col-sm-5">
-              <ul class="counter-list">
-                <li>
-                  <div class="single-counter">
-                    <span class="counter">32.2</span>% <br />
-                    <span class="title">US Obesity Rate</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="single-counter">
-                    <span class="counter">100</span>% <br />
-                    <span class="title">Happy Clients</span>
-                  </div>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
