--- a/public/index.html
+++ b/public/index.html
@@ -166,8 +166,7 @@
       <div class="main-banner slider-top-space-header4">
         <img src="img/slides/4-1.jpg" alt="image" class="img-responsive" />
         <div class="main-banner-inner">
-          <div class="main-banner-top-title">Hi</div>
-          <h1><span>I’m</span> Don Frisone</h1>
+          <h1>Don Frisone</h1>
           <p>Be the Best You, You Can Be</p>
           <ul class="main-banner-link">
             <li>
