more training text, breadcrumb links, and 404 page look

--- a/public/training.html
+++ b/public/training.html
@@ -170,7 +170,7 @@
             <div class="innter-title"><h2>Training</h2></div>
             <div class="breadcrum-area">
               <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li class="active">Training</li>
               </ul>
             </div>
@@ -189,71 +189,68 @@
                 </div>
                 <div class="content-section">
                   <p>
-                    Quisque et lectus pulvinar, porttitor mi non, elementum dui.
-                    Morbi mi nisl, tincidunt sed venenatis eget, finibus eu
-                    mauris. Nullam nisi lacus, feugiat eget varegeellentesque
-                    dictum odio. Sed sollicitudin viverra est, at aliquam metus
-                    ultrices id. Duis eu purus vel nisl commodo facilisis vitae
-                    ut lectus. Sed elementum dapibus tellus, a dictum metus
-                    interdum ac. Nullam condimentum, dui volutpat fringilla
-                    molestie, libero tortor ultrices lorem, at tempus diam purus
-                    non velit. Aliquam vel nulla eleifend, consequat elit id,
-                    tristique massa. Fusce dolor velit, blandit ac erat ac,
-                    vestibulum ornare diam.
+                    [Text introducing the service...]
                   </p>
                 </div>
                 <div class="content-list">
                   <p>
                     <span>
-                      <i class="fa fa-check" aria-hidden="true"></i>Personalized
-                      workout routines</span
+                      <i class="fa fa-check" aria-hidden="true"></i>Customized
+                      Workout Routines</span
                     >
                   </p>
                   <p>
-                    Sed elementum dapibus tellus, a dictum metus interdum ac.
-                    Nullam condimentum, dui volutpat fringilla molestie, libero
-                    tortor ultrices lorem, at tempus diam purus non velit.
-                    Aliquam vel nulla eleifend, consequat elit id, tristique
-                    massdolor velit, blandi.
+                    I will build a custom workout routines that will adapt to
+                    your fitness level over time. I do <strong>not</strong> use
+                    generic plans that are "one size fits all". Rather, I build
+                    personalized plans that work for your individual needs and
+                    will get you to your goals. As your fitness level increases,
+                    the workouts will adapt.
                   </p>
                   <p>
                     <span>
-                      <i class="fa fa-check" aria-hidden="true"></i>Adaptive
-                      meal plans</span
+                      <i class="fa fa-check" aria-hidden="true"></i>Meal
+                      Planning</span
                     >
                   </p>
                   <p>
-                    Sed elementum dapibus tellus, a dictum metus interdum ac.
-                    Nullam condimentum, dui volutpat fringilla molestie, libero
-                    tortor ultrices lorem, at tempus diam purus non velit.
-                    Aliquam vel nulla eleifend, consequat elit id, tristique
-                    massdolor velit, blandi.
+                    What you put into your body is going to determine what you
+                    get out of it. I do not believe in cutting out all of the
+                    foods you love, nor do I promote starving yourself to hit a
+                    goal. Instead, I believe in moderation and learning how to
+                    fit in your favorite foods to your day. As part of the plan,
+                    I will help you with your weekly meal planning to ensure
+                    that you stay on track.
                   </p>
                   <p>
                     <span>
-                      <i class="fa fa-check" aria-hidden="true"></i>One-on-one
-                      video or call sessions</span
+                      <i class="fa fa-check" aria-hidden="true"></i>One on One
+                      Coaching</span
                     >
                   </p>
                   <p>
-                    Sed elementum dapibus tellus, a dictum metus interdum ac.
-                    Nullam condimentum, dui volutpat fringilla molestie, libero
-                    tortor ultrices lorem, at tempus diam purus non velit.
-                    Aliquam vel nulla eleifend, consequat elit id, tristique
-                    massdolor velit, blandi.
+                    I offer weekly one-on-one check-ins to make sure that the
+                    provided meal and workout plans are going well, and to help
+                    you with any questions or concerns you may have.</p>
+                    <p>In addition
+                    to the weekly checkins, I am always available for you via
+                    email and text! In the middle of a workout and not sure if
+                    you are doing the workout correctly? Or at the supermarket
+                    and not sure which snack you should get? Shoot me a message anytime!</p>
                   </p>
                   <p>
                     <span>
-                      <i class="fa fa-check" aria-hidden="true"></i>Unlimited
-                      messaging</span
-                    >
+                      <i class="fa fa-check" aria-hidden="true"></i>Accountability and Support</span>
                   </p>
                   <p>
-                    Sed elementum dapibus tellus, a dictum metus interdum ac.
-                    Nullam condimentum, dui volutpat fringilla molestie, libero
-                    tortor ultrices lorem, at tempus diam purus non velit.
-                    Aliquam vel nulla eleifend, consequat elit id, tristique
-                    massdolor velit, blandi.
+                    This training is a partnership; if you fail, I fail. Throughout your training, I will hold you 
+                    accountable and keep pushing you to stay on track. [probably more text]
+                  </p>
+                  <p style="text-align: center">
+                    <q style="font-style: italic">There are two primary choices in life: to accept conditions as they exist, or accept the responsibility for changing them.</q>
+                      <br />
+                      <span style="font-size: 12px; text-align: right">- Denis Waitley</span>
+                    
                   </p>
                 </div>
               </div>
