--- a/public/404.html
+++ b/public/404.html
@@ -170,8 +170,7 @@
             <div class="innter-title"><h2>Error Page</h2></div>
             <div class="breadcrum-area">
               <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
+                <li><a href="/">Home</a></li>
                 <li class="active">404 page</li>
               </ul>
             </div>
@@ -185,10 +184,10 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="error-page">
-                <div class="error-content">
-                  <h1>404</h1>
-                  <p>Sorry Page Was Not Found</p>
-                </div>
+                <!-- <div class="error-content"> -->
+                <h1>404</h1>
+                <p>Sorry Page Was Not Found</p>
+                <!-- </div> -->
                 <div class="error-info">
                   <p>
                     The page you are looking is not available or has been
