--- a/public/about.html
+++ b/public/about.html
@@ -101,6 +101,7 @@
   </head>
 
   <body>
+    <div id="fb-root"></div>
     <!-- Start wrapper -->
     <div class="wrapper">
       <!--[if lt IE 8]>
@@ -170,7 +171,7 @@
             <div class="innter-title"><h2>About Me</h2></div>
             <div class="breadcrum-area">
               <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li class="active">About</li>
               </ul>
             </div>
@@ -384,7 +385,18 @@
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6">
-                <div class="instagram-area"><h3>Instagram Feed</h3></div>
+                <div class="instagram-area">
+                  <h3>Instagram Feed</h3>
+                  <div
+                    class="fb-page"
+                    data-href="https://www.facebook.com/Donmega54"
+                    data-tabs="timeline"
+                    data-small-header="false"
+                    data-adapt-container-width="true"
+                    data-hide-cover="false"
+                    data-show-facepile="true"
+                  ></div>
+                </div>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <!-- Placeholder -->
@@ -526,5 +538,18 @@
       ============================================
     -->
     <script src="js/main.js"></script>
+
+    <script>
+      (function(d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src =
+          "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=151569338591206&autoLogAppEvents=1";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
   </body>
 </html>
