--- a/public/contact.html
+++ b/public/contact.html
@@ -157,7 +157,7 @@
             <div class="innter-title"><h2>Contact</h2></div>
             <div class="breadcrum-area">
               <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li class="active">Contact</li>
               </ul>
             </div>
